tests/basic/eq/let_eq_int_03.pan.out
tests/basic/eq/let_eq_int_03.pan:4:1-4: error: unable to verify type of f02
tests/basic/eq/let_eq_int_03.pan:7:1-4: error: unable to verify type of f04
tests/basic/eq/let_eq_int_03.pan:11:1-4: error: unable to verify type of f12
tests/basic/eq/let_eq_int_03.pan:14:1-4: error: unable to verify type of f24